# myconso_ha

./: .gitignore  .pre-commit-config.yaml  README.md  configuration.yaml  hacs.json  pyproject.toml
custom_components/myconso_ha/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/myconso_ha/translations/: en.json
