[project]
name = "myconso_ha"
version = "0.0.1"
description = "Proxiserver myconso in ha"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "homeassistant~=2025.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.14.1",
]

[tool.uv]
required-version = ">=0.8.0"

[tool.ruff]
line-length = 88
include = ["custom_components/myconso_ha/*.py"]

[tool.ruff.lint]
select = [
    # flake8-async
    "ASYNC",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff
    "RUF",
    # flake8-quotes
    "Q",
    # pylint
    "PL",
]
